- New: FAQ in info section (tap info card on start page)
- New: black (AMOLED) app theme (only with one static accent color due to internal reasons)
- Improved: wallpaper design selection thumbnails
- Improved: method to determine if wallpaper is currently applied
- Improved: tilt effect options hidden if device has no acceleration sensor
- Improved: system bars appearance for older Android versions
- Fixed: revert a change from last version that caused always-dark status bar on some devices (hopefully this was the reason)
- Fixed: app theme dark mode switching on Android 12
- Fixed: some crashes and bugs

Please consider translating this app into your language at Transifex. There are only 124 strings to translate!

5.1.0:
- New: another sandy Pixel 6 wallpaper
- New: random wallpaper option now lets you select your favourite designs
- New: Arabic, Danish and Hebrew translations
- New: additional blue and purple app themes
- New: animation damping option for zoom effect on home screen (may be helpful if the zoom animation is jerky)
- Improved: app theme selection and app colors
- Improved: dynamic colors in app icon (Android 12+)
- Improved: splash screen on Android 12+
- Improved: bold text now correctly styled even if system font is used as fallback (currently Chinese, Hebrew and Uyghur)
- Improved: automatic Google Drive backup of current preferences disabled (not helpful when switching to a new phone and annoying when reinstalling the app)
- Improved: disabled options in parallax section now greyed out
- Improved: hide system-provided zoom option on non-Android-11 devices as it was removed in Android 12
- Improved: shape size settings structure and icons
- Improved: thumbnail for system wallpaper picker
- Fixed: unchanged text contrast when switching dark mode inside an app
- Fixed: wrong animation on Android 12+ when app theme or language were changed
- Fixed: random wallpaper option not working as expected
- Fixed: hopefully some crashes

5.0.2: