@@ -31,7 +31,6 @@ import android.view.View.OnClickListener;
 import android.view.ViewGroup;
 import android.widget.FrameLayout.LayoutParams;
 import androidx.annotation.NonNull;
-import com.google.android.material.color.DynamicColors;
 import xyz.zedler.patrick.doodle.R;
 import xyz.zedler.patrick.doodle.databinding.FragmentBottomsheetApplyBinding;
 import xyz.zedler.patrick.doodle.util.ViewUtil;
@@ -46,10 +45,6 @@ public class ApplyBottomSheetDialogFragment extends BaseBottomSheetDialogFragmen
   @Override
   public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container, Bundle state) {
     binding = FragmentBottomsheetApplyBinding.inflate(inflater, container, false);
-
-    if (DynamicColors.isDynamicColorAvailable()) {
-      binding.textApplyMonet.setVisibility(View.VISIBLE);
-    }
 
     ViewUtil.setOnClickListeners(
         this,
