@@ -5,6 +5,7 @@
 - Improved: wallpaper design selection thumbnails
 - Improved: method to determine if wallpaper is currently applied
 - Improved: tilt effect options hidden if device has no acceleration sensor
+- Improved: wallpaper restart NOT required to apply changed colors on Android 12 (my fault, turning off screen is enough)
 - Improved: system bars appearance for older Android versions
 - Fixed: revert a change from last version that caused always-dark status bar on some devices (hopefully this was the reason)
 - Fixed: app theme dark mode switching on Android 12
